css/style.css
:root {
    --icon-size: 30px;
    --timeline-width: 100%;
    --timeslot-width: 30px;
    --row-height: 50px;
}
div {
    border: 1px solid;
    margin: 10px;
}
#mit-body {
    display: flex;
}
#jobs {
    display: flex;
    justify-content: center;
}
#timeline {
    width: 95%;
}
#party-list {
    display: flex;
    justify-content: space-evenly;
    width: 80%;
    margin: auto;
}
#order {
    display: flex;
    justify-content: space-evenly;
}
#order > * {
    margin: 0;
}
#miti-list {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 80%;
    margin: auto;
}
#miti-list * {
    margin: auto;
    margin-top: 1em;
    margin-bottom: 1em;
}
#miti-list img {
    width: 60%;
}
#classes img {
    width: var(--icon-size);
}
#classes div {
    width: var(--icon-size);
    height: var(--icon-size);
    margin: auto;
}
#classes table {
    border-spacing: 0;
    border-collapse: collapse;
    height: 100%;
}
#timeline {
    width: var(--timeline-width);
    overflow-x: auto;
    overflow-y: hidden;
    font-size: 12px;
    scrollbar-width: none;
}
#timeline::-webkit-scrollbar {
    display:none;
}
#timeline div {
    border: none;
    margin: 0;
    /* width: inherit; */
    /* width: 1000px; */
    /* position: inherit; */
    /* overflow:visible; */
    white-space: nowrap;
}
#timeline table {
    border-spacing: 0;
    border-collapse: collapse;
    height:100%;
    width: 100%;
    table-layout: fixed;
}
#timeline tr {
    border: 1px solid;
    height: var(--row-height);
    vertical-align: top;
}
#timeline td {
    /* border: 1px solid lightgrey; */
    padding: 0;
    /* border: none; */
    width: var(--timeslot-width);
    /* height: var(--icon-size); */
    overflow-x: hidden;
}
#table {
    /* margin-left: -30px; */
    height: inherit;
}
.selected {
    background-color: whitesmoke;
    position:relative;
    z-index: -5;
}
.mech {
    /* Figure out how to make this prio later */
    border: none;
}
#instance {
    padding: 10px;
}
#instance-active {
    margin: 0;
    width: 40%;
    display: flex;
}
#instance-active img {
    margin: 10px;
    height: auto;
}
.inst-tab {
    display: flex;
}
.inst-tab img {
    height: auto;
}
#instance-dropdown {
    display: none;
    background-color: white;
    position: absolute;
    margin: 0;
}
#instance-dropdown div {
    margin: 0;
}
.flex {
    display: flex;
    justify-content: center;
}
.cast {
    /* display: inline-block; */
    position: relative;
    overflow: none;
}
.cast * {
    /* display:inline; */
    position: absolute;
    overflow: none;
}
.small-icon {
    width: var(--icon-size);
}

